<resources>
    <string name="app_name">ContactApplication</string>

    <string name="message_error_default">Упс, что-то пошло не так!</string>

    <string name="error">Ошибка!</string>
    <string name="retry">Повторить</string>
    <string name="list_empty">Список пуст!</string>

    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="edit">Редактировать</string>

    <string name="contact_list_screen_title">Контакты</string>
    <string name="contact_delete">Удалить</string>
    <string name="contact_delete_title">Удалить контакт</string>
    <string name="contact_delete_message">Вы действительно хотите удалить данный контакт?</string>
    <string name="contact_delete_success">Контакт успешно удален</string>

    <string name="contact_detail_screen_title">Детальный контакт</string>
    <string name="contact_detail_first_name">Имя</string>
    <string name="contact_detail_last_name">Фамилия</string>
    <string name="contact_detail_email">E-mail</string>
    <string name="contact_detail_save">Сохранить</string>
    <string name="contact_detail_first_name_invalid">Имя не менее 2-х символов</string>
    <string name="contact_detail_last_name_invalid">Фамилия не менее 2-х символов</string>
    <string name="contact_detail_email_invalid">Неверный e-mail</string>
    <string name="contact_update_title">Изменить контакт</string>
    <string name="contact_update_message">Не было обнаружено, что контакт изменился</string>
    <string name="contact_update_success">Контакт успешно обновлен</string>

</resources>